[package]
name = "fronius-limit-cli"
version = "0.2.0"
edition = "2024"
description = "CLI tool to set power export limits on Fronius inverters"
license = "Apache-2.0"
repository = "https://github.com/erwin314/fronius-limit-cli"

[package.metadata.release]
tag-prefix = "v"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
digest_auth = "0.3.1"
dotenvy = "0.15.7"
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }
url = "2.5.8"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link-Time Optimization (removes unused code)
codegen-units = 1 # Slows down compilation, but compresses better
strip = true      # Automatically strip debug symbols from the binary
panic = "abort"   # Removes unwinding code (optional, but saves space)
